# xmonad-config

./: stack.yaml  xmonad-config.cabal
src/: xmonad.hs
