name:                xmonad-config
version:             0.1.0.0
synopsis:            My Xmonad Config
description:         It's a great one
homepage:            http://github.com/drwebb/xmonad-config
license:             BSD3
license-file:        LICENSE
author:              Tristan Webb
maintainer:          tristanjwebb@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             xmonad.hs
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , containers
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/drwebb/xmonad-config
